--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
       "rules": {
         "max-len": ["error", { "code": 120 }],
         "import/prefer-default-export":"off",
+        "class-methods-use-this": "off",
+        "@angular-eslint/no-empty-lifecycle-method": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
