--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@core/*": ["app/core/*"],
       "@shared/*": ["app/shared/*"],
       "@youtube/*": ["app/youtube/*"],
+      "@redux/*": ["app/redux/*"],
       "@assets/*": ["app/assets/*"]
   },
     "outDir": "./dist/out-tsc",
